--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 # This is a workflow to test and deploy our demo app.
 
-
 name: Demo CI/CD
 
 # Controls when the workflow will run
@@ -14,9 +13,7 @@ on:
   workflow_dispatch:
 
 env:
-  DEMO_HOME: /home/runner/work/demo-repo3/demo-repo3/
-  PYTHONPATH: /home/runner/work/demo-repo3/demo-repo3/
-  # MONGO_PASSWD: ${{secrets.MONGO_PASSWD}}
+  DEMO_HOME: /home/runner/work/ticket_scraper/ticket_scraper_pp/
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,23 +21,12 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: pa_deploy
+    # environment: heroku-deploy
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Install MongoDB
-        uses: supercharge/mongodb-github-action@1.8.0
-
-      - name: Install Python packages.
-        run: make dev_env
-
-      - name: Run Python tests.
-        run: make all_tests
-        
-      - name: Deploy to PythonAnywhere
-        run: ./deploy.sh
-        env:
-          DEMO_PA_PWD: ${{secrets.DEMO_PA_PWD}}
+      - name: Say hi
+        run: echo hi
